--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="veterinarios.html">Veterinari@s</a>
+                        <a class="nav-link" href="veterinarios.html">Veterinarios</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="consultas.html">Consultas</a>
@@ -111,10 +111,10 @@
                     <div class="col">
                         <select class="form-control" id="dueno">
                             <option>Propietario</option>
-                            <option>Nora</option>
-                            <option>Melisa</option>
-                            <option>Karen</option>
-                            <option>Lizbeth</option>
+                            <option>Angel</option>
+                            <option>Eduardo</option>
+                            <option>Ian</option>
+                            <option>Noraima</option>
                             <option>Otro</option>
                         </select>
                     </div>
