--- a/duenos.html
+++ b/duenos.html
@@ -34,7 +34,7 @@
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="veterinarios.html">Veterinari@s</a>
+                        <a class="nav-link" href="veterinarios.html">Veterinarios</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="consultas.html">Consultas</a>
